test/sematest/valid/this_in_non_main_method.java
class A {
  public int bla(){
    return this.bla();
  }

  public static void main(String[] args) {
    new A().bla();
  }
}