test/sematest/invalid/use_of_void.java
class A {
  public static void main(String[] args) {
    void a;
  }
}